--- a/src/assets/styles/_constants.scss
+++ b/src/assets/styles/_constants.scss
@@ -6,7 +6,8 @@ $line-height: 24px;
 /* Colors */
 $text-primary: #FFFFFF;
 $text-secondary: #898CA9;
-$background-primary: #2B2C3B;
+$background-primary: #0B0B0F;
+$base: #1A1B23;
 $accent:  #B982FF;
 $gradient-primary: linear-gradient(90deg, #18C8FF 0%, #933FFE 100%);
 
