feat: footer styles

--- a/src/assets/styles/_constants.scss
+++ b/src/assets/styles/_constants.scss
@@ -10,6 +10,7 @@ $background-primary: #0B0B0F;
 $base: #1A1B23;
 $accent:  #B982FF;
 $gradient-primary: linear-gradient(90deg, #18C8FF 0%, #933FFE 100%);
+$gradient-secondary: linear-gradient(90deg,  #933FFE 0%, #18C8FF 100%);
 
 /* Break points */
 $small-mobile: 321px;
