--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -18,7 +18,7 @@
 
 @font-face {
   font-family: 'Inter';
-  src: url('./assets/fonts/Inter-Bold');
+  src: url('./assets/fonts/Inter-Bold.ttf');
   font-weight: 700;
 }
 
