--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -28,6 +28,24 @@
   }
 }
 
+
+/* Buttons*/
+
+@mixin action-btn {
+  background: $gradient-primary;
+  padding: 20px 33px;
+  @include B2;
+  border-radius: 10px;
+  border: none;
+  text-transform: capitalize;
+  outline: none;
+  cursor: pointer;
+  transition: 1s;
+  &:hover {
+    background: $gradient-secondary;
+  }
+}
+
 /* Fonts */
 
 @mixin H1 {
@@ -82,5 +100,15 @@
   @include mobile {
     font-size: 14px;
   }
-  
 }
+  
+  @mixin B2 {
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 100%;
+    color: $text-primary;
+    @include mobile {
+      font-size: 14px;
+    }
+}
+
