--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,24 +1,22 @@
 @import '../../assets/styles/constants';
 
 .search {
+  position: relative;
+  max-width: 14rem;
   display: flex;
-  max-width: 230px;
+  margin-bottom: 1rem;
   align-items: center;
   justify-content: space-between;
-  gap: 8px;
+  gap: 0.5rem;
   background: $background-primary;
   border: 2px solid $accent;
-  // border: 2px solid $gradient-primary;
   border-radius: 50px;
-  position: relative;
 
   &__submit {
-    color: white;
     position: absolute;
-    right: 35rem;
-    top: 0.5rem;
-    width: 40px;
-    height: 40px;
+    left: 11rem;
+    width: 2.5rem;
+    height: 2.5rem;
     border-radius: 50%;
     background: $gradient-primary;
     border: 0;
@@ -27,7 +25,6 @@
     transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
 
     &:hover {
-      color: #fff;
       background-color: #1A1A1A;
       box-shadow: rgba(0, 0, 0, 0.5) 0 10px 20px;
       transform: translateY(-3px);
