--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -4,3 +4,11 @@
   gap: 2rem;
   padding: 2rem 0;
 }
+
+.main {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
