--- a/src/components/ErrorBoundary/ErrorBoundary.module.scss
+++ b/src/components/ErrorBoundary/ErrorBoundary.module.scss
@@ -3,29 +3,11 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   gap: 30px;
 }
 
-.link {
-  text-decoration: none;
-}
-
-
 .message {
   text-align: center;
-}
-
-.content {
-  font-size: 18px;
-  color: $text;
-
-  @include small-tablet {
-    font-size: 2.34vw;
-  }
-
-  @media (max-width: 671px) {
-    font-size: 15.7px;
-  }
 }
