--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -22,10 +22,10 @@
     border: 0;
     display: inline-block;
     cursor: pointer;
-    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
 
     &:hover {
-      background-color: #1A1A1A;
+      background-color: #1a1a1a;
       box-shadow: rgba(0, 0, 0, 0.5) 0 10px 20px;
       transform: translateY(-3px);
     }
