feat: add routing

--- a/src/components/CoinTable/CoinTable.module.scss
+++ b/src/components/CoinTable/CoinTable.module.scss
@@ -11,7 +11,6 @@
 
     tr {
       border-bottom: 1px solid #2b2c3b;
-      cursor: pointer;
       &:last-child {
         border-bottom: none;
       }
@@ -31,6 +30,12 @@
   &__name {
     @include H4;
     text-align: left;
+
+    & a {
+      @include H4;
+      text-align: left;
+      text-decoration: none
+    }
   }
 
   &__symbol {
