feat: styled elements

--- a/src/components/CoinCard/CoinCard.module.scss
+++ b/src/components/CoinCard/CoinCard.module.scss
@@ -1,8 +1,9 @@
 @import '../../assets/styles/constants';
 @import '../../assets/styles/mixins';
 
-.card{
-  width: 17rem;
+.card {
+  flex: 2;
+  min-width: 30rem;
   position: relative;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -10,30 +11,43 @@
   gap: 10px;
   background-color: $base;
   border: none;
-  border: 1rem;
+  border-radius: 1rem;
   padding: 1rem;
+  &__name {
+    @include H4;
+  }
+  &__rank {
+    color: $text-primary;
+  }
+  &__price {
+    color: $text-primary;
+  }
+  &__symbol {
+    @include H4;
+    color: $accent;
+  }
   &__icon {
     background-color: transparent;
   }
-  &__change{
+  &__change {
     @include H4;
     color: $accent;
     align-self: center;
   }
-  &__description{
+  &__description {
     grid-column: 1 / 3;
     justify-self: center;
   }
-  &__high,  &__low {
+  &__high,
+  &__low {
     @include H3;
   }
   &__close {
     position: absolute;
-    left: 15rem;
+    left: 90%;
     background-color: transparent;
     border: none;
     outline: none;
     cursor: pointer;
   }
-
 }
