--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -3,16 +3,17 @@
 .pagination {
   display: flex;
   gap: 1rem;
+  margin-top: 2rem;
 
-&__buttons {
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
+  &__buttons {
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
     &:hover {
       color: $accent;
     }
   }
   &__current {
-    color: $text-primary;
+    color: $accent;
   }
 }
