--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -8,7 +8,7 @@
   align-items: center;
   justify-content: space-between;
   gap: 0.5rem;
-  background: $background-primary;
+  background: $base;
   border: 2px solid $accent;
   border-radius: 50px;
 
