--- a/src/pages/Error404/Error404.css
+++ b/src/pages/Error404/Error404.css
@@ -16,36 +16,38 @@
   justify-content: center;
   gap: 40px;
   min-width: 40vh;
-  height: 100%;;
+  height: 100%;
 }
 
 .message-box h1 {
   font-size: 100px;
   line-height: 46px;
   color: #b982ff;
-
 }
 
 .message-box p {
   font-size: 20px;
-
 }
 
-
-#Polygon-1 , #Polygon-2 , #Polygon-3 , #Polygon-4 , #Polygon-4, #Polygon-5 {
+#Polygon-1,
+#Polygon-2,
+#Polygon-3,
+#Polygon-4,
+#Polygon-4,
+#Polygon-5 {
   animation: float 1s infinite ease-in-out alternate;
 }
 #Polygon-2 {
-  animation-delay: .2s;
+  animation-delay: 0.2s;
 }
 #Polygon-3 {
-  animation-delay: .4s;
+  animation-delay: 0.4s;
 }
 #Polygon-4 {
-  animation-delay: .6s;
+  animation-delay: 0.6s;
 }
 #Polygon-5 {
-  animation-delay: .8s;
+  animation-delay: 0.8s;
 }
 
 @keyframes float {
@@ -73,4 +75,3 @@
     background-color: rgba(249, 248, 248, 0.7);
   }
 }
-
