--- a/src/pages/Error404/Error404.css
+++ b/src/pages/Error404/Error404.css
@@ -8,7 +8,7 @@
   gap: 50px;
 }
 
-.message-box {
+.message__box {
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -19,16 +19,25 @@
   height: 100%;
 }
 
-.message-box h1 {
+.message__box h1 {
   font-size: 100px;
   line-height: 46px;
   color: #b982ff;
 }
 
-.message-box p {
+.message__box p {
   font-size: 20px;
 }
-
+.message__button {
+  background: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: 1s;
+}
+.message__button:hover {
+  text-decoration: underline;
+}
 #Polygon-1,
 #Polygon-2,
 #Polygon-3,
@@ -69,7 +78,7 @@
     z-index: 1;
     transform: translate(-50%, -50%);
   }
-  .message-box {
+  .message__box {
     position: relative;
     z-index: 2;
     background-color: rgba(249, 248, 248, 0.7);
