--- a/src/components/CoinsList/CoinsList.module.scss
+++ b/src/components/CoinsList/CoinsList.module.scss
@@ -5,6 +5,11 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+
+.coin {
+  display: flex;
+  gap: 1rem;
 
   &__name {
     @include H3;
