-m: add flyout element

--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -45,6 +45,15 @@
   }
 }
 
+@mixin transparent-btn {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  &:hover {
+    color: $accent;
+  }
+}
+
 /* Fonts */
 
 @mixin H1 {
