--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -1,4 +1,5 @@
 @import '../../assets/styles/constants';
+@import '../../assets/styles/mixins';
 
 .pagination {
   display: flex;
@@ -6,12 +7,7 @@
   margin-top: 2rem;
 
   &__buttons {
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-    &:hover {
-      color: $accent;
-    }
+  @include transparent-btn;
   }
   &__current {
     color: $accent;
