--- a/src/components/FlyoutMenu/FlyoutMenu.module.scss
+++ b/src/components/FlyoutMenu/FlyoutMenu.module.scss
@@ -1,20 +1,49 @@
 @import '../../assets/styles/mixins';
+@import '../../assets/styles/constants';
 
 .menu {
+  position: relative;
+  top: -100%;
+  grid-column: 2 / 3;
+  justify-self: end;
   display: grid;
   grid-template: auto auto / 1fr 1fr;
-  &__title {
-    grid-column: span 2;
-    &_count {
+  grid-column-gap: 1rem;
+  padding: 1rem;
+  background-color: $base;
+  border-radius: 20px;
+  animation: slide-up 0.5s ease-out forwards;
 
+  &__title {
+    grid-column: 1;
+    grid-row: 1;
+    &_count {
+      @include H3;
+      color: $accent;
     }
   }
 
   &__unselect {
+    grid-column: 1;
+    grid-row: 2;
+    justify-self: start;
     @include transparent-btn;
   }
 
   &__download {
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
     @include action-btn;
+  }
+}
+
+@keyframes slide-up {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
   }
 }
