--- a/src/assets/styles/_constants.scss
+++ b/src/assets/styles/_constants.scss
@@ -9,6 +9,7 @@ $text-secondary: #898ca9;
 $background-primary: #0b0b0f;
 $base: #1a1b23;
 $accent: #b982ff;
+$highlight: #FF9800;
 $gradient-primary: linear-gradient(90deg, #18c8ff 0%, #933ffe 100%);
 $gradient-secondary: linear-gradient(90deg, #933ffe 0%, #18c8ff 100%);
 
