--- a/src/assets/styles/_constants.scss
+++ b/src/assets/styles/_constants.scss
@@ -4,10 +4,16 @@ $font-size: 16px;
 $line-height: 24px;
 
 /* Colors */
-$text-primary: #ffffff;
-$text-secondary: #898ca9;
-$background-primary: #0b0b0f;
-$base: #1a1b23;
+:root{
+  --text-primary-light: #0b0b0f;
+  --text-primary-dark: #ffffff;
+  --text-secondary: #898ca9;
+  --background-primary-dark: #0b0b0f;
+  --background-primary-light: #f1eeee;
+  --base-dark: #1a1b23;
+  --base-light: #ffffff;
+}
+
 $accent: #b982ff;
 $highlight: #FF9800;
 $gradient-primary: linear-gradient(90deg, #18c8ff 0%, #933ffe 100%);
