--- a/src/components/FlyoutMenu/FlyoutMenu.module.scss
+++ b/src/components/FlyoutMenu/FlyoutMenu.module.scss
@@ -2,15 +2,15 @@
 @import '../../assets/styles/constants';
 
 .menu {
-  position: relative;
-  top: -100%;
+  position: absolute;
+  top: 85%;
   grid-column: 2 / 3;
   justify-self: end;
   display: grid;
   grid-template: auto auto / 1fr 1fr;
   grid-column-gap: 1rem;
   padding: 1rem;
-  background-color: $base;
+  background-color: var(--base);
   border-radius: 20px;
   animation: slide-up 0.5s ease-out forwards;
 
