--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -25,17 +25,17 @@
   position: relative;
   width: 80px;
   height: 40px;
-  --light: #d8dbe0;
+  --light: #f1eeee;
   --dark: #28292c;
 
   &__switch {
     position: absolute;
     width: 100%;
     height: 40px;
-    background-color: var(--dark);
+    background-color: var(--light);
     border-radius: 25px;
     cursor: pointer;
-    border: 3px solid var(--dark);
+    border: 2px solid $accent;
   }
 
   &__checkbox {
@@ -53,7 +53,7 @@
 }
 
 .toggle__checkbox:checked ~ .toggle__slider {
-  background-color: var(--light);
+  background-color: var(--dark);
 }
 
 .toggle__slider::before {
@@ -64,9 +64,9 @@
   width: 25px;
   height: 25px;
   border-radius: 50%;
-  -webkit-box-shadow: inset 12px -4px 0px 0px var(--light);
-  box-shadow: inset 12px -4px 0px 0px var(--light);
-  background-color: var(--dark);
+  -webkit-box-shadow: inset 12px -4px 0px 0px var(--dark);
+  box-shadow: inset 12px -4px 0px 0px var(--dark);
+  background-color: var(--light);
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
@@ -75,7 +75,7 @@
   -webkit-transform: translateX(30px);
   -ms-transform: translateX(30px);
   transform: translateX(30px);
-  background-color: var(--dark);
+  background-color: var(--light);
   -webkit-box-shadow: none;
   box-shadow: none;
 }
