--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -8,7 +8,7 @@
   align-items: center;
   justify-content: space-between;
   gap: 0.5rem;
-  background: $base;
+  background: var(--base);
   border: 2px solid $accent;
   border-radius: 10px;
 
@@ -39,7 +39,7 @@
     border: none;
     background: none;
     outline: none;
-    color: $text-primary;
+    color: var(--text-primary);
     font-size: 16px;
     padding: 1rem;
   }
