--- a/src/pages/CoinsPage/CoinsPage.module.scss
+++ b/src/pages/CoinsPage/CoinsPage.module.scss
@@ -10,7 +10,8 @@
 }
 
 .main {
-  width: 90vw;
+  position: relative;
+  // width: 90vw;
   display: grid;
   grid-template-columns: 20rem 1fr;
   gap: 3rem;
@@ -18,7 +19,7 @@
 .aside {
   padding: 1rem;
   border-radius: 20px;
-  background-color: $base;
+  background-color: var(--base);
 }
 
 .coins {
