--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -1,35 +1,1 @@
-@font-face {
-  font-family: 'Inter';
-  src: url('./assets/fonts/Inter-Regular.ttf');
-  font-weight: 400;
-}
-
-@font-face {
-  font-family: 'Inter';
-  src: url('./assets/fonts/Inter-Medium.ttf');
-  font-weight: 500;
-}
-
-@font-face {
-  font-family: 'Inter';
-  src: url('./assets/fonts/Inter-SemiBold.ttf');
-  font-weight: 600;
-}
-
-@font-face {
-  font-family: 'Inter';
-  src: url('./assets/fonts/Inter-Bold.ttf');
-  font-weight: 700;
-}
-
-@font-face {
-  font-family: 'Inter';
-  src: url('./assets/fonts/Inter- ExtraBold.ttf');
-  font-weight: 800;
-}
-
-@font-face {
-  font-family: 'Inter';
-  src: url('./assets/fonts/Inter-Black.ttf');
-  font-weight: 900;
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
