--- a/src/components/CoinCard/CoinCard.module.scss
+++ b/src/components/CoinCard/CoinCard.module.scss
@@ -6,8 +6,7 @@
   min-width: 30rem;
   position: relative;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: auto auto auto;
+  grid-template: auto auto auto / repeat(2, 1fr);
   gap: 10px;
   background-color: var(--base);
   border: none;
