--- a/src/components/Checkbox/Checkbox.module.scss
+++ b/src/components/Checkbox/Checkbox.module.scss
@@ -13,15 +13,15 @@
     cursor: pointer;
     height: 0;
     width: 0;
-      &:checked ~ .checkbox__mark {
-        background-image: $gradient-primary;
-       }
-      &:checked ~ .checkbox__mark:after {
-        display: block;
-       }
-   }
+    &:checked ~ .checkbox__mark {
+      background-image: $gradient-primary;
+    }
+    &:checked ~ .checkbox__mark:after {
+      display: block;
+    }
+  }
 
-   &__mark {
+  &__mark {
     position: relative;
     top: 0;
     left: 0;
@@ -29,16 +29,18 @@
     width: 1.3em;
     background: #606062;
     border-radius: 5px;
-    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.30), 0px 1px 1px rgba(0, 0, 0, 5);
-      &::after {
-        content: "";
-        position: absolute;
-        display: none;
-      }
-   }
- }
+    box-shadow:
+      0px 0px 1px rgba(0, 0, 0, 0.3),
+      0px 1px 1px rgba(0, 0, 0, 5);
+    &::after {
+      content: '';
+      position: absolute;
+      display: none;
+    }
+  }
+}
 
- .checkbox .checkbox__mark:after {
+.checkbox .checkbox__mark:after {
   left: 0.45em;
   top: 0.25em;
   width: 0.25em;
@@ -46,4 +48,4 @@
   border: solid white;
   border-width: 0 0.15em 0.15em 0;
   transform: rotate(45deg);
- }
+}
