--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -13,7 +13,8 @@
     color: $highlight;
     letter-spacing: 3px;
   }
-  &__logo, &__title {
+  &__logo,
+  &__title {
     justify-self: start;
   }
 }
@@ -56,7 +57,7 @@
 }
 
 .toggle__slider::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 5px;
   left: 10px;
