--- a/src/components/FlyoutMenu/FlyoutMenu.module.scss
+++ b/src/components/FlyoutMenu/FlyoutMenu.module.scss
@@ -2,10 +2,8 @@
 @import '../../assets/styles/constants';
 
 .menu {
-  position: absolute;
-  top: 85%;
+  width: 25rem;
   grid-column: 2 / 3;
-  justify-self: end;
   display: grid;
   grid-template: auto auto / 1fr 1fr;
   grid-column-gap: 1rem;
