--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,6 +1,7 @@
 @import '../../assets/styles/constants';
 
 .footer {
+  grid-column: span 2;
   display: flex;
   justify-content: space-between;
   align-items: center;
