--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -58,3 +58,12 @@ ul {
 .container {
   @include common-container;
 }
+.app {
+  min-height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: repeat(3, auto);
+  gap: 1rem;
+  padding: 2rem 0;
+  @include common-container;
+}
