--- a/src/components/Forms/forms.css
+++ b/src/components/Forms/forms.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  align-items: center;
+  align-items: flex-start;
+  padding-left: 4rem;
 }
 
 .form__field {
@@ -57,8 +58,12 @@
 .form__checkbox {
   width: 16.5rem;
   display: flex;
-  align-items: center;
+  flex-direction: column;
 }
+.form__checkbox input {
+  width: 1rem
+}
+
 
 .input__note {
   font-size: 0.7rem;
